--- a/src/app/animales/animales.component.html
+++ b/src/app/animales/animales.component.html
@@ -1,23 +1,5 @@
-<p>animales works!</p>
-<div class="row">
-<div class="text-center">
-    <img src="https://www.lavanguardia.com/files/image_449_220/uploads/2019/10/02/5fa53234969ff.jpeg"  class="w-auto p-3 h-10" style="background-color: #eee;">
-</div>
-    
-</div>
+<html style="background-image: url(https://www.elzoopublicidad.com/images/Portada-web-zoo.jpg);background-repeat: no-repeat; background-size: 100%;">
 
-<div class="cotainer">
-    <div class="row justify-content-center">
-        <div class="col-md-8">
-          <div class="card border-primary mb-3">
-            <div class="card-header alert alert-info text-center" >
-          </div>
-          
-        </div>
-    </div>
-        
-
-</div>
-
+</html>
 
 <!--<div class="w-25 p-3" style="background-color: #eee;">Width 25%</div>-->
