--- a/src/app/animales/eliminar-animales/eliminar-animales.component.html
+++ b/src/app/animales/eliminar-animales/eliminar-animales.component.html
@@ -1,1 +1,5 @@
-<p>eliminar-animales works!</p>
+<div class="container-fluid">
+    <div>
+        <h5 class="alert alert-info text-center"><i class="fas fa-eraser"></i> Eliminar Animal</h5>
+    </div>
+</div>
