--- a/src/app/animales/registro-animales/registro-animales.component.html
+++ b/src/app/animales/registro-animales/registro-animales.component.html
@@ -1,1 +1,106 @@
-<p>registro-animales works!</p>
+<html style="background-image: url(https://i.ytimg.com/vi/EuLdC8IsyWs/maxresdefault.jpg);background-repeat: no-repeat; background-size: 100%;">
+<form style="background-color: chocolate;">
+    <div class="container-fluid">
+        <div>
+            <h5 class="alert alert-info text-center"><i class="far fa-registered"></i> Registrar Animal</h5>
+        </div>
+    </div>
+    <ul>
+        <li>
+          <label for="codigo">Codigo:</label>
+          <input type="texto" id="codigo" name="animal_codigo" [(ngModel)]="codigo">
+        </li>
+        <li>
+          <label for="nombre">Nombre:</label>
+          <input type="texto" id="nombre" name="animal_nombre" [(ngModel)]="nombre">
+        </li>
+        <li>
+            <label for="especie">Especie:</label>
+            <input type="texto" id="especie" name="animal_especie" [(ngModel)]="especie">
+          </li>
+          <li>
+            <label for="fechaNacimiento">FechaNacimiento:</label>
+            <input type="texto" id="fechaNacimiento" name="animal_edad" [(ngModel)]="fechaNacimiento">
+          </li>
+          <li>
+            <label for="fechaIngreso">FechaIngreso:</label>
+            <input type="texto" id="fechaIngreso" name="animal_ingreso" [(ngModel)]="fechaIngreso">
+          </li>
+        <li>
+          <label for="msg">Descripcion:</label>
+          <textarea id="descripcion" name="animal_descripcion" [(ngModel)]="descripcion"></textarea>
+        </li>
+        <li>
+            <button type="submit" class="btn btn-success" (click)="insertarAnimales()"><i class="far fa-save"></i> Registrar</button>
+        </li>
+        
+       </ul>
+       <style>
+           form {
+  /* Centrar el formulario en la página */
+  margin: 0 auto;
+  width: 400px;
+  /* Esquema del formulario */
+  padding: 1em;
+  border: 1px solid #CCC;
+  border-radius: 1em;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+form li + li {
+  margin-top: 1em;
+}
+
+label {
+  /* Tamaño y alineación uniforme */
+  display: inline-block;
+  width: 90px;
+  text-align: right;
+}
+
+input,
+textarea {
+  /* Para asegurarse de que todos los campos de texto tienen la misma configuración de letra
+     Por defecto, las áreas de texto tienen un tipo de letra monoespaciada */
+  font: 1em sans-serif;
+
+  /* Tamaño uniforme del campo de texto */
+  width: 300px;
+  box-sizing: border-box;
+
+  /* Hacer coincidir los bordes del campo del formulario */
+  border: 1px solid #999;
+}
+
+input:focus,
+textarea:focus {
+  /* Destacado adicional para elementos que tienen el cursor */
+  border-color: #000;
+}
+
+textarea {
+  /* Alinear los campos de texto multilínea con sus etiquetas */
+  vertical-align: top;
+
+  /* Proporcionar espacio para escribir texto */
+  height: 5em;
+}
+
+.button {
+  /* Alinear los botones con los campos de texto */
+  padding-left: 90px; /* mismo tamaño que los elementos de la etiqueta */
+}
+
+button {
+  /* Este margen adicional representa aproximadamente el mismo espacio que el espacio
+     entre las etiquetas y sus campos de texto */
+  margin-left: .5em;
+}
+       </style>
+</form>
+</html>
