--- a/src/app/tickets/lista-ticket/lista-ticket.component.html
+++ b/src/app/tickets/lista-ticket/lista-ticket.component.html
@@ -13,6 +13,7 @@
                     <th>Tipo</th>
                     <th>Estado</th>
                     <th></th>
+                    <th></th>
                 </tr>
                 </thead>
                 <tbody>
@@ -23,6 +24,7 @@
                         <td>{{ticket.tipo}}</td>
                         <td>{{ticket.estado}}</td>
                         <td><button type="button" class="btn btn-primary" [routerLink]="['/crear-ticket', ticket.id]"><i class="fas fa-edit"></i></button></td>
+                        <td  class="align-middle"><button type="button" class="btn btn-danger" (click)="eliminar(ticket.id)"><i class="fas fa-minus"></i></button></td>
                     </tr>
                 </tbody>
         </table>
