--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,38 +3,36 @@
     <main class="login-form">
         <div class="container" style="padding-top:1.5cm ;" >
             <div class="row justify-content-center">
-                <div class="col-md-8">
+                <div class="col-md-6">
                     <div class="card border-secondary mb-3">
                         <div class="card-header alert alert-Secondary text-center" ><i class="fas fa-user fa-2x"></i>
                             <font size=6> Login </font>
                         </div>
                         <div class="card-body">
                             <form action="" method="">
-                                <div class="form-group row">
-                                    <label for="email_address" class="col-md-4 col-form-label text-md-right">E-Mail
+                                <div class="form-group row" style="margin: 5px;">
+                                    <label for="email_address" class="col-md-4 col-form-label text-md-right" style="text-align: right;">E-Mail
                                         Address</label>
-                                    <div class="col-md-6">
+                                    <div class="col-md-6" >
                                         <input type="text" id="email_address" class="form-control" name="email-address"
-                                            required autofocus [(ngModel)]="email">
+                                            required autofocus [(ngModel)]="email" style="height: 0.9cm;">
                                     </div>
                                 </div>
                                 <div class="form-group row">
-                                    <label for="password" class="col-md-4 col-form-label text-md-right">Password</label>
+                                    <label for="password" class="col-md-4 col-form-label text-md-right" style="text-align: right;">Password</label>
                                     <div class="col-md-6">
-                                        <input type="password" id="password" class="form-control" name="password" required [(ngModel)]="contrasena">
+                                        <input type="password" id="password" class="form-control" name="password" required [(ngModel)]="contrasena" style="height: 0.9cm;">
                                     </div>
                                 </div>
-    
-                                <div class="form-group row">
+                                <div class="form-group row" style="margin: 5px;" >
                                     <div class="col-md-6 offset-md-4">
                                         <div class="checkbox">
                                             <label>
-                                                <input type="checkbox" name="remember"> Recuerdame
+                                                <input type="checkbox" name="remember"> Mostrar contraseña
                                             </label>
                                         </div>
                                     </div>
-                                </div>
-    
+                                </div>    
                                 <div class="col-md-6 offset-md-4">
                                     <button type="submit" class="btn btn-primary" (click)="onLogin()">
                                         Log in
