--- a/src/app/usuarios/registrar-personas/registrar-personas.component.html
+++ b/src/app/usuarios/registrar-personas/registrar-personas.component.html
@@ -6,15 +6,15 @@
 <div style="background-image: url(https://wallpapercave.com/wp/wp4841321.jpg); background-size: 100%;">
     <div class="container" >
         <br>
-        <p class="text-center">Bienvenidos a la página de registro</p>
+        <p class="text-center" style="color: white;">Bienvenidos a la página de registro</p>
         <hr>
         <div class="card bg-light">
             <article class="card-body mx-auto" style="max-width: 400px;">
                 <h4 class="card-title mt-3 text-center">Crear usuario</h4>
                 <p class="text-center">Inicia con tu cuenta gratis</p>
                 <p>
-                    <a class="btn btn-block btn-twitter"> <i class="fab fa-twitter"></i>Login via Twitter</a>
-                    <a class="btn btn-block btn-facebook"> <i class="fab fa-facebook-f"></i>   Login via
+                    <a class="btn btn-block btn-twitter" style="color: white;"> <i class="fab fa-twitter"></i>Login via Twitter</a>
+                    <a class="btn btn-block btn-facebook" style="color: white;"> <i class="fab fa-facebook-f"></i>   Login via
                         facebook</a>
                 </p>
                 <p class="divider-text">
@@ -43,15 +43,16 @@
                         <div class="input-group-prepend">
                             <span class="input-group-text"><i class="fas fa-birthday-cake"></i></span>
                         </div>
-                        <input name="" class="form-control" placeholder="fecha de nacimiento" type="text"
+                        <input name="" class="form-control" placeholder="fecha de nacimiento" type="datetime"
                             [(ngModel)]="fechaDeNacimiento">
                     </div>
-                    <label>Genero </label>
+                    <label>Género</label>
                     <div class="form-group input-group">
-                        <select id="inputState" class="form-select" [(ngModel)]="genero"><i class="fas fa-venus-mars"></i>
-                            <option selected disabled>Elegir...</option>
+                        <select id="inputState" class="form-select" [(ngModel)]="genero" ><i class="fas fa-venus-mars"></i>
+                            <option disabled selected>Elegir...</option>
                             <option>Femenino</option>
                             <option>Masculino</option>
+                            <option>Otro...</option>
                         </select>
                     </div>
                     <div class="form-group input-group">
@@ -83,13 +84,18 @@
                     </div>
                     <div class="form-group input-group">
                         <div class="input-group-prepend">
-                            <span class="input-group-text"> <i class="fa fa-lock"></i> </span>
+                            <span class="input-group-text"> <i class="fa fa-lock" ></i> </span>
                         </div>
-                        <input class="form-control" placeholder="Create password" type="password" [(ngModel)]="contrasena">
-                    </div>
+                        <input class="form-control" placeholder="Create password" type="password" [(ngModel)]="contrasena" id='pass'>
+                        <div class="input-group-prepend">
+                            <span class="input-group-text"> <i class="fas fa-eye-slash" (click)='ocultarContrasena()'></i> </span>
+                        </div> 
+                        <div class="input-group-prepend">
+                            <span class="input-group-text"> <i class="fas fa-eye" (click)="mostrarContrasena()"  ></i> </span>
+                        </div> 
+                    </div>                    
                     <div class="form-group">
-                        <button type="submit" class="btn btn-primary btn-block" (click)="insertarPersonas()" routerLink="/venta"> Create
-                            Account </button>
+                        <button type="submit" class="btn btn-primary btn-block" (click)="insertarPersonas()"> Crear cuenta </button>
                     </div>
                     <p class="text-center">Ya tienes una cuenta? <a routerLink="/login">Log in</a> </p>
                 </form>
