LOGIN Y REGISTER HECHOS

--- a/src/app/usuarios/registrar-personas/registrar-personas.component.html
+++ b/src/app/usuarios/registrar-personas/registrar-personas.component.html
@@ -39,11 +39,12 @@
                         </div>
                         <input name="" class="form-control" placeholder="edad" type="number" [(ngModel)]="edad">
                     </div>
+                    <label>Fecha de nacimiento</label>
                     <div class="form-group input-group">
                         <div class="input-group-prepend">
                             <span class="input-group-text"><i class="fas fa-birthday-cake"></i></span>
                         </div>
-                        <input name="" class="form-control" placeholder="fecha de nacimiento" type="datetime"
+                        <input name="" class="form-control" placeholder="Día/Mes/Año" type="text"
                             [(ngModel)]="fechaDeNacimiento">
                     </div>
                     <label>Género</label>
