--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -11,24 +11,23 @@
                         <div class="card-body">
                             <form action="" method="">
                                 <div class="form-group row" style="margin: 5px;">
-                                    <label for="email_address" class="col-md-4 col-form-label text-md-right" style="text-align: right;">E-Mail
-                                        Address</label>
+                                    <label for="email_address" class="col-md-4 col-form-label text-md-right" style="text-align: right;">Correo Electrónico</label>
                                     <div class="col-md-6" >
                                         <input type="text" id="email_address" class="form-control" name="email-address"
-                                            required autofocus [(ngModel)]="email" style="height: 0.9cm;">
+                                            required autofocus [(ngModel)]="email" style="height: 0.9cm;" placeholder="example@network.com">
                                     </div>
                                 </div>
-                                <div class="form-group row">
-                                    <label for="password" class="col-md-4 col-form-label text-md-right" style="text-align: right;">Password</label>
+                                <div class="form-group row"  style="margin: 5px;">
+                                    <label for="password" class="col-md-4 col-form-label text-md-right" style="text-align: right;">Contraseña</label>
                                     <div class="col-md-6">
-                                        <input type="password" id="password" class="form-control" name="password" required [(ngModel)]="contrasena" style="height: 0.9cm;">
+                                        <input type="password" id="password" class="form-control" name="password" required [(ngModel)]="contrasena" style="height: 0.9cm;" placeholder="********">
                                     </div>
                                 </div>
                                 <div class="form-group row" style="margin: 5px;" >
                                     <div class="col-md-6 offset-md-4">
                                         <div class="checkbox">
                                             <label>
-                                                <input type="checkbox" name="remember"> Mostrar contraseña
+                                                <input type="checkbox" name="remember"> Recuerdame
                                             </label>
                                         </div>
                                     </div>
