--- a/src/app/taquilla/venta/venta.component.html
+++ b/src/app/taquilla/venta/venta.component.html
@@ -36,7 +36,7 @@
                                         <div class="card-footer">
                                             <div class="row">
                                                 <div *ngIf="ticket.estado" class="col-6">
-                                                    <button type="button"
+                                                    <button type="button" placement="top" ngbTooltip="Agregar ticket"
                                                         class="w-100 text-center btn btn-outline-success fas fa-plus float-right px-0" (click)="agregar(ticket.id)"></button>
                                                 </div>
                                                 <div *ngIf="!(ticket.estado)" class="col-6">
@@ -45,7 +45,7 @@
                                                         disabled><i class="fas fa-times"></i></button>
                                                 </div>
                                                 <div class="col-6">
-                                                    <button type="button"
+                                                    <button type="button" placement="top" ngbTooltip="Ver detalles"
                                                         class="w-100 btn btn-outline-primary fas fa-eye float-right px-0" (click)="verDetalleTicket(ticket.id)"></button>
                                                 </div>
                                             </div>
@@ -77,7 +77,7 @@
         <div>
             <h6 class="alert alert-primary align-middle col-12 py-1" role="alert">
                 <div class="row">
-                    <div class="col-2"><i class="fas fa-clipboard-list"></i> Cliente</div>
+                    <div class="col-2"><i class="fas fa-user"></i> Cliente</div>
                     <div class="col-1">Cedula: </div> <div class="col-3"><input type="text" class="form-control form-control-sm" [(ngModel)]="datosCliente.cedula"></div>
                     <div class="col-1">Nombre: </div> <div class="col-5"><input type="text" class="form-control form-control-sm" [(ngModel)]="datosCliente.nombre"></div>
                 </div>
