--- a/src/app/usuarios/usuarios.component.html
+++ b/src/app/usuarios/usuarios.component.html
@@ -48,11 +48,11 @@
                                 <div class="col-12"><br>
                                     <button type="submit" class="btn btn-dark" style="margin-left: 290px"
                                         (click)="insertarUsuario()">Agregar</button>
-
                                    
+                                  
 
                                     <button type="submit" class="btn btn-dark"
-                                        style="margin-left: 260px"(click)="eliminarUsuario()">Eliminar</button>
+                                        style="margin-left: 260px" routerLink="/listar-usuario"> Ver</button>
                                 </div>
                             </fieldset>
                         </div>
