--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -17,21 +17,15 @@
                                             required autofocus [(ngModel)]="email" style="height: 0.9cm;" placeholder="example@network.com">
                                     </div>
                                 </div>
-                                <div class="form-group row"  style="margin: 5px;">
-                                    <label for="password" class="col-md-4 col-form-label text-md-right" style="text-align: right;">Contraseña</label>
-                                    <div class="col-md-6">
-                                        <input type="password" id="password" class="form-control" name="password" required [(ngModel)]="contrasena" style="height: 0.9cm;" placeholder="********">
-                                    </div>
-                                </div>
-                                <div class="form-group row" style="margin: 5px;" >
-                                    <div class="col-md-6 offset-md-4">
-                                        <div class="checkbox">
-                                            <label>
-                                                <input type="checkbox" name="remember"> Recuerdame
-                                            </label>
-                                        </div>
-                                    </div>
-                                </div>    
+                                <div class="form-group input-group col-md-4" style="height: 1cm; width: 10cm; transform: translateX(5.5cm); ;">
+                                    <input type="password" id="password" class="form-control" name="password" required [(ngModel)]="contrasena" style="height: 0.9cm;" placeholder="********">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text"> <i class="fas fa-eye-slash" (click)='ocultarContrasena()'></i> </span>
+                                    </div> 
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text"> <i class="fas fa-eye" (click)="mostrarContrasena()"  ></i> </span>
+                                    </div> 
+                                </div>                                   
                                 <div class="col-md-6 offset-md-4">
                                     <button type="submit" class="btn btn-primary" (click)="onLogin()">
                                         Log in
