--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -17,7 +17,7 @@
                                             required autofocus [(ngModel)]="email" style="height: 0.9cm;" placeholder="example@network.com">
                                     </div>
                                 </div>
-                                <div class="form-group input-group col-md-4" style="height: 1cm; width: 10cm; transform: translateX(5.5cm); ;">
+                                <div class="form-group input-group col-md-4" style="height: 1cm; width: 10cm; transform: translateX(5.5cm); ">
                                     <input type="password" id="password" class="form-control" name="password" required [(ngModel)]="contrasena" style="height: 0.9cm;" placeholder="********">
                                     <div class="input-group-prepend">
                                         <span class="input-group-text"> <i class="fas fa-eye-slash" (click)='ocultarContrasena()'></i> </span>
