--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -23,7 +23,7 @@
                         <i class="fas fa-ticket-alt"></i> Tickets
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <li><a class="dropdown-item" [routerLink]="['/crear-ticket', null]"><i class="fas fa-ticket-alt"></i> Crear</a></li>
+                        <li><a class="dropdown-item" href="/crear-ticket/null"><i class="fas fa-ticket-alt"></i> Crear</a></li>
                         <li><a class="dropdown-item" routerLink="/litar-ticket"><i class="fas fa-clipboard-list"></i> Listar</a></li>
                     </ul>
                 </li>
