--- a/src/app/tickets/formulario-ticket/formulario-ticket.component.html
+++ b/src/app/tickets/formulario-ticket/formulario-ticket.component.html
@@ -28,13 +28,22 @@
     
         <div class="col-3">
         <!-- habitats -->
-            <label for="nombreTicket" class="form-label">Habitats asignados</label>
+            <label for="nombreTicket" class="form-label">Habitats asignados {{listaHabitatsSeleccionados.length}}</label>
 
-            <select class="form-select h-75 text-center" multiple aria-label="Lista habitats" [(ngModel)]="listaHabitatsSeleccionados">
-                <option  *ngFor="let habitat of listaHabitats;let i = index" [ngValue]="habitat">
-                    {{habitat.nombre}} 
-                </option>
-            </select>
+            <div class="border border-black">
+                <div class="form-group border-secondary " *ngFor="let habitat of listaHabitats;let i = index">
+                    <div class="row">
+                        <div class="col-8 ms-3 my-2">
+                            {{habitat.nombre}}
+                        </div>
+                        <div class="col-2 my-2">
+                            <button *ngIf="estaSeleccionado(habitat.id) == null" class="btn btn-primary" (click)="seleccionarHabitat(habitat.id)"> <i class="fas fa-check-circle"></i> </button>
+                            <button *ngIf="estaSeleccionado(habitat.id) != null" class="btn btn-danger" (click)="deseleccionarHabitat(habitat.id)"> <i class="fas fa-times-circle"></i> </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
 
