--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -28,7 +28,7 @@
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" role="button" routerLink="/animales"
+                    <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" role="button"
                         data-bs-toggle="dropdown" aria-expanded="false">
                         <i class="fas fa-paw"></i> Animales
                     </a>
