--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-dark navbar-expand-lg bg-dark">
+<nav class="navbar navbar-light navbar-expand-lg " style="background-color: #e4f3ff;">
     <div class="container-fluid w-100">
         <a class="navbar-brand" href="#"><strong>ZooUnibague</strong></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navba22202220191011rNavDropdown"
@@ -46,9 +46,7 @@
                 <li class="nav-item">
                     <a class="nav-link" routerLink="/usuarios"> <i class="fas fa-users"></i> Usuarios</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link pull-left" routerLink="/ventas" style="padding-left: 17cm;"><i class="fas fa-sign-in-alt"></i> Cerrar Sesion </a>
-                </li>
+                
                 <!-- <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
                         data-bs-toggle="dropdown" aria-expanded="false">
@@ -61,6 +59,9 @@
                     </ul>
                 </li> -->
             </ul>
+        </div>
+        <div class="nav-item justify-content-end">
+            <a class="nav-link pull-left link-danger" routerLink="/ventas" ><i class="fas fa-sign-in-alt"></i> Cerrar Sesion </a>
         </div>
     </div>
 </nav>
