muchachos arreglé la interfaz de todos

--- a/src/app/animales/animales.component.html
+++ b/src/app/animales/animales.component.html
@@ -1,4 +1,4 @@
-<html style="background-image: url(https://www.elzoopublicidad.com/images/Portada-web-zoo.jpg);background-repeat: no-repeat; background-size: 100%;">
+<html>
 
 </html>
 
