--- a/src/app/tickets/formulario-ticket/formulario-ticket.component.html
+++ b/src/app/tickets/formulario-ticket/formulario-ticket.component.html
@@ -7,37 +7,37 @@
         <div class="col-1"></div>
 
         <div class="col-6">
-                <div class="mb-3">
-                    <label  class="form-label">Nombre</label>
-                    <input type="text" class="form-control" [(ngModel)]="ticket.nombre">
-                </div>
-                <div class="mb-3">
-                    <label class="form-label">Valor</label>
-                    <input type="number" class="form-control" [(ngModel)]="ticket.valor">
-                </div>
-                <div class="mb-3">
-                    <label for="tipoTicket" class="form-label">tipo</label>
-                    <input type="Text" class="form-control" id="tipoTicket" [(ngModel)]="ticket.tipo">
-                </div>
-                <br>
-                <button type="submit" class="btn btn-success" (click)="guardar()"><i class="far fa-save"></i> Guardar</button>
-                        
+            <div class="mb-3">
+                <label class="form-label">Nombre</label>
+                <input type="text" class="form-control" [(ngModel)]="ticket.nombre">
+            </div>
+            <div class="mb-3">
+                <label class="form-label">Valor</label>
+                <input type="number" class="form-control" [(ngModel)]="ticket.valor">
+            </div>
+            <div class="mb-3">
+                <label for="tipoTicket" class="form-label">Tipo</label>
+                <input type="Text" class="form-control" id="tipoTicket" [(ngModel)]="ticket.tipo">
+            </div>
+            <br>
+            <button type="submit" class="btn btn-secondary" (click)="guardar()"><i class="far fa-save"></i> Guardar</button>
+
         </div>
 
         <div class="col-1"></div>
-    
-        <div class="col-3">
-        <!-- habitats -->
+
+        <div class="col-3 text-white">
+            <!-- habitats -->
             <label for="nombreTicket" class="form-label">Habitats asignados {{listaHabitatsSeleccionados.length}}</label>
 
-            <div class="border border-black">
-                <div class="form-group border-secondary " *ngFor="let habitat of listaHabitats;let i = index">
+            <div class="border border-white">
+                <div class="form-group border-primary " *ngFor="let habitat of listaHabitats;let i = index">
                     <div class="row">
                         <div class="col-8 ms-3 my-2">
                             {{habitat.nombre}}
                         </div>
                         <div class="col-2 my-2">
-                            <button *ngIf="estaSeleccionado(habitat.id) == null" class="btn btn-primary" (click)="seleccionarHabitat(habitat.id)"> <i class="fas fa-check-circle"></i> </button>
+                            <button *ngIf="estaSeleccionado(habitat.id) == null" class="btn btn-success" (click)="seleccionarHabitat(habitat.id)"> <i class="fas fa-check-circle"></i> </button>
                             <button *ngIf="estaSeleccionado(habitat.id) != null" class="btn btn-danger" (click)="deseleccionarHabitat(habitat.id)"> <i class="fas fa-times-circle"></i> </button>
                         </div>
                     </div>
@@ -47,5 +47,5 @@
         </div>
     </div>
 
-    
+
 </div>
