--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
 <div class="container-fluid">
-  <div class="row">
-    <div class="col-12">
-      <div class="row">
-        <div class="p-0">
-          <app-menu></app-menu>
+    <div class="row">
+        <div class="col-12">
+            <div class="row">
+                <div class="p-0">
+                    <app-menu></app-menu>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
 </div>
-<router-outlet style="background-image: url(https://wallpapercave.com/wp/wp4841321.jpg); background-size: 100%;"></router-outlet>
+<router-outlet></router-outlet>
