--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,45 +1,46 @@
 <link rel="stylesheet" href="login.component.css">
-<html style="background-image: url(https://wallpapercave.com/wp/wp4841321.jpg);background-repeat: no-repeat; background-size: 100%;">
-    <main class="login-form">
-        <div class="container" style="padding-top:1.5cm ;" >
-            <div class="row justify-content-center">
-                <div class="col-md-6">
-                    <div class="card border-secondary mb-3">
-                        <div class="card-header alert alert-Secondary text-center" ><i class="fas fa-user fa-2x"></i>
-                            <font size=6> Login </font>
-                        </div>
-                        <div class="card-body">
-                            <form action="" method="">
-                                <div class="form-group row" style="margin: 5px;">
-                                    <label for="email_address" class="col-md-4 col-form-label text-md-right" style="text-align: right;">Correo Electrónico</label>
-                                    <div class="col-md-6" >
-                                        <input type="text" id="email_address" class="form-control" name="email-address"
-                                            required autofocus [(ngModel)]="email" style="height: 0.9cm;" placeholder="example@network.com">
-                                    </div>
+<html>
+<main class="login-form">
+    <div class="container" style="padding-top:1.5cm ;">
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <div class="card border-secondary mb-3" style="-webkit-box-shadow: 2px 2px 84px 12px rgba(0,0,0,0.56);
+                -moz-box-shadow: 2px 2px 84px 12px rgba(0,0,0,0.56);
+                box-shadow: 2px 2px 84px 12px rgba(0,0,0,0.56);">
+                    <div class=" card-header alert alert-success text-center "><i class="fas fa-user fa-2x "></i>
+                        <font size=6> Login </font>
+                    </div>
+                    <div class="card-body ">
+                        <form action=" " method=" ">
+                            <div class="form-group row " style="margin: 5px; ">
+                                <label for="email_address " class="col-md-4 col-form-label text-md-right " style="text-align: right; ">Correo Electrónico</label>
+                                <div class="col-md-6 ">
+                                    <input type="text " id="email_address " class="form-control " name="email-address " required autofocus [(ngModel)]="email " style="height: 0.9cm; " placeholder="example@network.com ">
                                 </div>
-                                <div class="form-group input-group col-md-4" style="height: 1cm; width: 10cm; transform: translateX(5.5cm); ">
-                                    <input type="password" id="password" class="form-control" name="password" required [(ngModel)]="contrasena" style="height: 0.9cm;" placeholder="********">
-                                    <div class="input-group-prepend">
-                                        <span class="input-group-text"> <i class="fas fa-eye-slash" (click)='ocultarContrasena()'></i> </span>
-                                    </div> 
-                                    <div class="input-group-prepend">
-                                        <span class="input-group-text"> <i class="fas fa-eye" (click)="mostrarContrasena()"  ></i> </span>
-                                    </div> 
-                                </div>                                   
-                                <div class="col-md-6 offset-md-4">
-                                    <button type="submit" class="btn btn-primary" (click)="onLogin()">
+                            </div>
+                            <div class="form-group input-group col-md-4 " style="height: 1cm; width: 10cm; transform: translateX(5.5cm); ">
+                                <input type="password " id="password " class="form-control " name="password " required [(ngModel)]="contrasena " style="height: 0.9cm; " placeholder="******** ">
+                                <div class="input-group-prepend ">
+                                    <span class="input-group-text "> <i class="fas fa-eye-slash " (click)='ocultarContrasena()'></i> </span>
+                                </div>
+                                <div class="input-group-prepend ">
+                                    <span class="input-group-text "> <i class="fas fa-eye " (click)="mostrarContrasena() "  ></i> </span>
+                                </div>
+                            </div>
+                            <div class="col-md-6 offset-md-4 ">
+                                <button type="submit " class="btn btn-primary " (click)="onLogin() ">
                                         Log in
                                     </button>
-                                    <a class="btn btn-link" routerLink="/registrar-personas">
+                                <a class="btn btn-link " routerLink="/registrar-personas ">
                                         ¿No te has registrado?
                                     </a>
-                                </div>
-                            </form>
-                        </div>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
         </div>
-    </main>
-</html>
+    </div>
+</main>
 
+</html>
