--- a/src/app/usuarios/usuarios.component.html
+++ b/src/app/usuarios/usuarios.component.html
@@ -1,38 +1,37 @@
+<link rel="stylesheet" href="usuarios.component.css">
 
-
-    <link rel="stylesheet" href="usuarios.component.css">
-    <html style="background-image: url(https://wallpapercave.com/wp/wp4841321.jpg);background-repeat: no-repeat; background-size: 100%;">
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-md-8">
-                <div class="card border-secondary mb-3">
-                    <div class="card-header alert alert- text-center">
-                        <font size=6>Usuario</font>
-                    </div>
-                    <div class="col-md">
-                        <label for="inputAddress" class="form-label">Tipo de usuario</label>
-                        <input type="text" class="form-control" id="inputAddress" placeholder="" style="width : 50%"
-                            [(ngModel)]="tipoUsuario">
-                    </div>
-                    <br>
-                    <div class="col-md">
-                        <label for="inputAddress" class="form-label">Nombre de usuario</label>
-                        <input type="text" class="form-control" id="inputAddress" placeholder="" style="width : 50%"
-                            [(ngModel)]="nombreUsuario">
-                    </div>
-                    <br>
-                    <div class="col-md">
-                        <label for="inputAddress" class="form-label">Persona exclusiva</label>
-                        <select id="inputState" class="form-select" style="width : 50%" [(ngModel)]="personaExclusiva">
+<html>
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-md-8">
+            <div class="card border-secondary mb-3 mt-5" style="-webkit-box-shadow: 2px 2px 84px 12px rgba(0,0,0,0.56);
+            -moz-box-shadow: 2px 2px 84px 12px rgba(0,0,0,0.56);
+            box-shadow: 2px 2px 84px 12px rgba(0,0,0,0.56);">
+                <div class="card-header alert alert- text-center">
+                    <font size=6>Usuario</font>
+                </div>
+                <div class="col-md">
+                    <label for="inputAddress" class="form-label">Tipo de usuario</label>
+                    <input type="text" class="form-control" id="inputAddress" placeholder="" style="width : 50%" [(ngModel)]="tipoUsuario">
+                </div>
+                <br>
+                <div class="col-md">
+                    <label for="inputAddress" class="form-label">Nombre de usuario</label>
+                    <input type="text" class="form-control" id="inputAddress" placeholder="" style="width : 50%" [(ngModel)]="nombreUsuario">
+                </div>
+                <br>
+                <div class="col-md">
+                    <label for="inputAddress" class="form-label">Persona exclusiva</label>
+                    <select id="inputState" class="form-select" style="width : 50%" [(ngModel)]="personaExclusiva">
                             <option selected disabled>Elegir...</option>
                             <option>Si</option>
                             <option>No</option>
                         </select>
-                    </div>
-                    <br>
-                    <div class="col-md">
-                        <label for="inputState" class="form-label">Rol</label>
-                        <select id="inputState" class="form-select" style="width : 50%" [(ngModel)]="rol">
+                </div>
+                <br>
+                <div class="col-md">
+                    <label for="inputState" class="form-label">Rol</label>
+                    <select id="inputState" class="form-select" style="width : 50%" [(ngModel)]="rol">
                             <option selected>Elegir...</option>
                             <option>Visitante</option>
                             <option>Veterinario</option>
@@ -40,26 +39,24 @@
                             <option>Guia</option>
                             <option>Cuidador de animales</option>
                         </select>
-                        <div class="move-2">
+                    <div class="move-2">
 
-                           
-                            <fieldset class="row mb-3">
 
-                                <div class="col-12"><br>
-                                    <button type="submit" class="btn btn-dark" style="margin-left: 290px"
-                                        (click)="insertarUsuario()">Agregar</button>
-                                   
-                                  
+                        <fieldset class="row mb-3">
 
-                                    <button type="submit" class="btn btn-dark"
-                                        style="margin-left: 260px" routerLink="/listar-usuario"> Ver</button>
-                                </div>
-                            </fieldset>
-                        </div>
+                            <div class="col-12"><br>
+                                <button type="submit" class="btn btn-dark" style="margin-left: 290px" (click)="insertarUsuario()">Agregar</button>
+
+
+
+                                <button type="submit" class="btn btn-dark" style="margin-left: 260px" routerLink="/listar-usuario"> Ver</button>
+                            </div>
+                        </fieldset>
                     </div>
                 </div>
             </div>
         </div>
     </div>
- </html>
+</div>
 
+</html>
