--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -15,23 +15,23 @@
                             <div class="form-group row " style="margin: 5px; ">
                                 <label for="email_address " class="col-md-4 col-form-label text-md-right " style="text-align: right; ">Correo Electrónico</label>
                                 <div class="col-md-6 ">
-                                    <input type="text " id="email_address " class="form-control " name="email-address " required autofocus [(ngModel)]="email " style="height: 0.9cm; " placeholder="example@network.com ">
+                                    <input type="text" id="email_address" class="form-control " name="email-address" required autofocus [(ngModel)]="email" style="height: 0.9cm; " placeholder="example@network.com " autocomplete="off">
                                 </div>
                             </div>
                             <div class="form-group input-group col-md-4 " style="height: 1cm; width: 10cm; transform: translateX(5.5cm); ">
-                                <input type="password " id="password " class="form-control " name="password " required [(ngModel)]="contrasena " style="height: 0.9cm; " placeholder="******** ">
+                                <input type="password" id="password" class="form-control " name="password" required [(ngModel)]="contrasena" style="height: 0.9cm; " placeholder="******** " autocomplete="off">
                                 <div class="input-group-prepend ">
                                     <span class="input-group-text "> <i class="fas fa-eye-slash " (click)='ocultarContrasena()'></i> </span>
                                 </div>
                                 <div class="input-group-prepend ">
-                                    <span class="input-group-text "> <i class="fas fa-eye " (click)="mostrarContrasena() "  ></i> </span>
+                                    <span class="input-group-text "> <i class="fas fa-eye " (click)="mostrarContrasena()"  ></i> </span>
                                 </div>
                             </div>
                             <div class="col-md-6 offset-md-4 ">
-                                <button type="submit " class="btn btn-primary " (click)="onLogin() ">
+                                <button type="submit" class="btn btn-primary " (click)="onLogin()">
                                         Log in
                                     </button>
-                                <a class="btn btn-link " routerLink="/registrar-personas ">
+                                <a class="btn btn-link " routerLink="/registrar-personas">
                                         ¿No te has registrado?
                                     </a>
                             </div>
