--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -61,7 +61,7 @@
             </ul>
         </div>
         <div class="nav-item justify-content-end">
-            <a class="nav-link pull-left link-danger" routerLink="/ventas" ><i class="fas fa-sign-in-alt"></i> Cerrar Sesion </a>
+            <a class="nav-link pull-left link-danger" (click)="cerrarSesion()" ><i class="fas fa-sign-in-alt"></i> Cerrar Sesion </a>
         </div>
     </div>
 </nav>
