--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
         <div class="col-12">
             <div class="row">
                 <div class="p-0">
-                    <app-menu></app-menu>
+                    <app-menu *ngIf="verMenu"></app-menu>
                 </div>
             </div>
         </div>
