--- a/src/app/habitats/lista-habitats/lista-habitats.component.html
+++ b/src/app/habitats/lista-habitats/lista-habitats.component.html
@@ -1,1 +1,37 @@
-<p>lista-habitats works!</p>
+<div class="container-fluid">
+    <div>
+        <h5 class="alert alert-info text-center"><i class="fas fa-ticket-alt"></i> Lista de habitats</h5>
+    </div>
+
+    <div>
+        <table class="table table-striped table-inverse table-responsive">
+            <thead class="thead-inverse">
+                <tr>
+                    <th>#</th>
+                    <th>Nombre</th>
+                    <th>valor</th>
+                    <th>Tipo</th>
+                    <th>Accion</th>
+                </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let habitat of listaHabitats;let i = index">
+                        <td scope="row"> <strong>{{i+1}}</strong> </td>
+                        <td>{{habitat.nombre}}</td>
+                        <td>{{habitat.tipo}}</td>
+                        <td>{{habitat.cantidadMaxanimales}}</td>
+                        <td class="align-middle" style="width: 10%;">
+                            <div class="row">   
+                                <div class="col-5">
+                                    <button placement="top" ngbTooltip="Editar" type="button" class="btn btn-primary" [routerLink]="['/crear-ticket', habitat.id]"><i class="fas fa-edit"></i></button>
+                                </div>
+                                <div class="col-5">
+                                    <button placement="top" ngbTooltip="Eliminar" type="button" class="btn btn-danger" (click)="eliminarHabitat(habitat.id)"><i class="fas fa-minus"></i></button>
+                                </div>                            
+                            </div>
+                        </td>
+                    </tr>
+                </tbody>
+        </table>
+    </div>
+</div>
