--- a/src/app/habitats/lista-habitats/lista-habitats.component.html
+++ b/src/app/habitats/lista-habitats/lista-habitats.component.html
@@ -23,7 +23,7 @@
                         <td class="align-middle" style="width: 10%;">
                             <div class="row">   
                                 <div class="col-5">
-                                    <button placement="top" ngbTooltip="Editar" type="button" class="btn btn-primary" [routerLink]="['/crear-ticket', habitat.id]"><i class="fas fa-edit"></i></button>
+                                    <button placement="top" ngbTooltip="Editar" type="button" class="btn btn-primary" [routerLink]="['/crear-habitat', habitat.id]"><i class="fas fa-edit"></i></button>
                                 </div>
                                 <div class="col-5">
                                     <button placement="top" ngbTooltip="Eliminar" type="button" class="btn btn-danger" (click)="eliminarHabitat(habitat.id)"><i class="fas fa-minus"></i></button>
