--- a/src/app/taquilla/venta/venta.component.html
+++ b/src/app/taquilla/venta/venta.component.html
@@ -102,7 +102,7 @@
 
             <table class="table table-striped table-hover text-center">
                 <thead>
-                    <tr>
+                    <tr class="bg-info rounded-3">
                         <th scope="col">#</th>
                         <th scope="col">nombre</th>
                         <th scope="col">Precio</th>
@@ -112,7 +112,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr *ngFor="let ticket of listaSeleccionados;let i = index;">
+                    <tr class="bg-white rounded-3" *ngFor="let ticket of listaSeleccionados;let i = index;">
                         <th class="align-middle" scope="row">{{i+1}}</th>
                         <td class="align-middle">{{ticket.titulo}}</td>
                         <td class="align-middle">{{ticket.precio}}</td>
