--- a/src/app/tickets/lista-ticket/lista-ticket.component.html
+++ b/src/app/tickets/lista-ticket/lista-ticket.component.html
@@ -1,12 +1,12 @@
-<div class="container-fluid">
+<div class="container">
     <div>
         <h5 class="alert alert-info text-center"><i class="fas fa-ticket-alt"></i> Lista de tickets</h5>
     </div>
 
-    <div>
-        <table class="table table-striped table-inverse table-responsive">
-            <thead class="thead-inverse">
-                <tr>
+    <div class="rounded-3">
+        <table class="table table-striped table-inverse rounded-3">
+            <thead class="thead-inverse rounded-3">
+                <tr class="bg-info rounded-3">
                     <th>#</th>
                     <th>Nombre</th>
                     <th>valor</th>
@@ -15,8 +15,8 @@
                     <th>Accion</th>
                 </tr>
                 </thead>
-                <tbody>
-                    <tr *ngFor="let ticket of listaTickets;let i = index">
+                <tbody class="rounded-3">
+                    <tr class="bg-white rounded-3" *ngFor="let ticket of listaTickets;let i = index">
                         <td scope="row"> <strong>{{i+1}}</strong> </td>
                         <td>{{ticket.nombre}}</td>
                         <td>{{ticket.valor}}</td>
